added (janky) player, dynamic themes and more

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "protoc": {
         "options": ["-I", "proto"]
-    }
+    },
+    "explorer.fileNesting.patterns": {
+        "*.ts": "${capture}.js"
+    },
+    "explorer.fileNesting.enabled": true
 }
