--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "music-player",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "vite build --emptyOutDir",
     "dev": "vite --host",
@@ -10,21 +11,39 @@
   },
   "devDependencies": {
     "@protobuf-ts/plugin": "^2.8.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "@sveltejs/vite-plugin-svelte": "1.0.0-next.47",
     "@tsconfig/svelte": "^2.0.0",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.13",
-    "svelte": "^3.0.0",
+    "rollup": "^3.2.5",
+    "rollup-plugin-typescript": "^1.0.1",
+    "svelte": "^3.52.0",
     "svelte-check": "^2.0.0",
+    "svelte-loader": "^3.1.3",
     "svelte-preprocess": "^4.0.0",
     "tailwindcss": "^3.0.24",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0",
-    "vite": "^2.9.9"
+    "vite": "^3.0.0",
+    "vite-plugin-commonjs": "^0.5.3",
+    "vite-pwa": "^1.0.2"
   },
   "dependencies": {
     "@protobuf-ts/grpcweb-transport": "^2.8.1",
     "@protobuf-ts/runtime": "^2.8.1",
-    "@protobuf-ts/runtime-rpc": "^2.8.1"
+    "@protobuf-ts/runtime-rpc": "^2.8.1",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@web-std/common": "link:web-std/packages/common",
+    "@web-std/flux": "link:web-std/packages/flux",
+    "@web-std/form": "link:web-std/packages/form",
+    "@web-std/store": "link:web-std/packages/store",
+    "@web-std/svelte-common": "link:web-std/packages/svelte-common",
+    "@web-std/utility": "link:web-std/packages/utility",
+    "@web-std/wrappers": "link:web-std/packages/wrappers",
+    "color2k": "^2.0.0",
+    "colorthief": "^2.3.2",
+    "dexie": "^3.2.2",
+    "tailwind-merge": "^1.8.0"
   }
 }
