--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "tslib": "^2.0.0",
     "typescript": "^4.0.0",
     "vite": "^3.0.0",
-    "vite-plugin-commonjs": "^0.5.3",
-    "vite-pwa": "^1.0.2"
+    "vite-plugin-commonjs": "^0.5.3"
   },
   "dependencies": {
     "@protobuf-ts/grpcweb-transport": "^2.8.1",
@@ -44,6 +43,7 @@
     "color2k": "^2.0.0",
     "colorthief": "^2.3.2",
     "dexie": "^3.2.2",
-    "tailwind-merge": "^1.8.0"
+    "tailwind-merge": "^1.8.0",
+    "vite-plugin-pwa": "^0.13.3"
   }
 }
